--- a/css/main.css
+++ b/css/main.css
@@ -1812,7 +1812,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #1d08ff;
+  background: #3c4eff;
 }
 .links-of-blogroll {
   font-size: 13px;
