--- a/css/main.css
+++ b/css/main.css
@@ -1824,7 +1824,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #e4cbff;
+  background: #9cff16;
 }
 .links-of-blogroll {
   font-size: 13px;
